build:move to super pom configuration